[package]
name = "pumpkin-chunk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
pumpkin-util.workspace = true
pumpkin-nbt.workspace = true
pumpkin-data.workspace = true

rustc-hash.workspace = true
serde.workspace = true

tracing.workspace = true

[lints]
workspace = true
