[package]
name = "pumpkin-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["query", "bedrock", "clientbound", "serverbound"]
full = ["dep:pumpkin-chunk", "dep:pumpkin-data"]
bedrock = ["full"]
serverbound = ["full", "dep:pumpkin-macros"]
clientbound = ["full", "dep:pumpkin-macros"]
query = []

[dependencies]
pumpkin-nbt.workspace = true
pumpkin-data = { workspace = true, features = ["packet", "item_id_remap", "entity_id_remap", "sound_id_remap", "recipes"], optional = true }
pumpkin-macros = { workspace = true, optional = true }
pumpkin-chunk = { workspace = true, optional = true }
pumpkin-util.workspace = true

uuid.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "io-util"] }
bytes.workspace = true
rustc-hash.workspace = true

# encryption
aes.workspace = true
cfb8.workspace = true
hybrid-array = "0.4"

# compression
async-compression = { workspace = true, features = ["tokio", "zlib", "deflate"] }
flate2.workspace = true

take_mut.workspace = true
bitflags.workspace = true

[dev-dependencies]
# Validate correctness

[lints]
workspace = true
