[package]
name = "pumpkin-registry"
version.workspace = true
edition.workspace = true

[dependencies]
pumpkin-data = { path = "../pumpkin-data" }
pumpkin-protocol = { path = "../pumpkin-protocol" }
pumpkin-util = { path = "../pumpkin-util" }

indexmap = { version = "2.7", features = ["serde"] }

serde.workspace = true
serde_json.workspace = true

