[package]
name = "pumpkin-registry"
version.workspace = true
edition.workspace = true

[dependencies]
pumpkin-data.workspace = true
pumpkin-protocol.workspace = true
pumpkin-util.workspace = true

indexmap = { version = "2.7", features = ["serde"] }

serde.workspace = true
serde_json.workspace = true

