[package]
name = "pumpkin-world-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
pumpkin-data.workspace = true
pumpkin-util.workspace = true
pumpkin-nbt.workspace = true
pumpkin-config.workspace = true

tokio.workspace = true
tokio-util.workspace = true
crossbeam.workspace = true
bitflags.workspace = true
tracing.workspace = true

serde.workspace = true
rand.workspace = true

[lints]
# workspace = true
