[package]
name = "pumpkin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[package.metadata.tauri-winres]
# FileDescription is handled as the Program name by Windows!
FileDescription = "Pumpkin"
OriginalFilename = "pumpkin.exe"
LegalCopyright = "Copyright © 2026 Aleksander Medvedev"

[features]
bedrock = []
# console-subscriber = ["dep:console-subscriber"]
# tokio_taskdump = ["pumpkin-world/tokio_taskdump"]

[dependencies]
pumpkin-core.workspace = true

[lints]
workspace = true
